Don't make changes to scrollbar width in Chrome Use a set width since this is for browsers we don't really care much about. This way we can know how it will look. (Tested in Edge) https://github.com/Strategy11/formidable-pro/issues/2389

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -24,7 +24,7 @@
 	--medium-sidebar: 350px;
 	--big-sidebar: 390px;
 	--biggest-sidebar: 450px;
-	--scrollbar-cushion: 7px;
+	--scrollbar-cushion: 0px;
 	--wp-sidebar-width: 160px;
 }
 
